Add mandatory elements to pom now that Kotlin extensions are added. Relates to #27